# AnalystBlaze

./: .env.example  .gitignore  README.md  RELEASING.md  WINDOWS_COMPATIBILITY.md  index.html  package-lock.json  package.json  requirements.txt  server.py  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  security-pentest.yml
docs/: README.md  adaptive-optimization-manager.md  optimization-safety-matrix.md  remediation-checklist.md  security-assumptions.md  security-pentest.md  windows-lab-validation.md  windows-latency-optimizer-wave1.md
reports/: desktop-security-pentest-results.json  latest-security-report.md  security-pentest-schema.json
scripts/: cargo-check-sac.ps1  cargo-sac.ps1  remove-dev-helper-service.ps1  security-lab-validation.ps1  tauri-build-sac.ps1  tauri-dev-sac.ps1  tauri-sac-router.ps1
src/: App.tsx  index.css  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: helper-service.ps1  hooks.nsh
src-tauri/src/: audit.rs  config.rs  lib.rs  main.rs  process_ext.rs  updater.rs
src-tauri/src/api/: hmac.rs  mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/optimizations/: adaptive.rs  autostart.rs  cleanup.rs  detection.rs  disk_tree.rs  disk_usage.rs  energy.rs  focus.rs  latency.rs  local_ai_policy.rs  memory.rs  mod.rs  network_admin.rs  os_version.rs  performance_suite.rs  privileged_helper.rs  processes.rs  protected_apps.rs  safety.rs  snapshot.rs  visual_effects.rs  windows_actions.rs  windows_inventory.rs
src-tauri/src/telemetry/: advanced.rs  collector.rs  engine.rs  live_mode.rs  mod.rs  network.rs  state.rs
src-tauri/tests/: security_harness.rs
src/backend/ai/: analyzer.py  context.py  insights.py  predictor.py  (+3 more)
src/frontend/: ui.py
src/hooks/: useAgentTelemetry.ts  useAuth.ts  useTelemetry.ts  useTheme.ts  useUpdater.ts
src/i18n/: I18nProvider.tsx  index.ts  translations.ts
src/pages/: Index.tsx  NotFound.tsx
src/services/: insights.ts
src/types/: i18n.ts
src/update/: launcher.py  release.py  updater_core.py
version/: hash.txt
(+23 files in other folders)
