[package]
name = "analystblaze-desktop"
version = "0.1.47"
description = "AnalystBlaze desktop agent"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "analystblaze_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
sysinfo = "0.38.4"
rayon = "1.10.0"
libloading = "0.8.9"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
url = "2.5.8"
thiserror = "2.0.18"
anyhow = "1.0.102"
base64 = "0.22.1"
keyring = { version = "3.6.3", features = ["windows-native"] }
winreg = "0.55.0"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Performance", "Win32_System_Pipes", "Win32_System_Power", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-service = "0.8.0"
